--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -1,3 +1,95 @@
+
+@article{robinson2010scaling,
+  title={A scaling normalization method for differential expression analysis of RNA-seq data},
+  author={Robinson, Mark D and Oshlack, Alicia},
+  journal={Genome biology},
+  volume={11},
+  number={3},
+  pages={1--9},
+  year={2010},
+  publisher={BioMed Central}
+}
+
+@article{chen2016reads,
+  title={From reads to genes to pathways: differential expression analysis of RNA-Seq experiments using Rsubread and the edgeR quasi-likelihood pipeline},
+  author={Chen, Yunshun and Lun, Aaron TL and Smyth, Gordon K},
+  journal={F1000Research},
+  volume={5},
+  year={2016},
+  publisher={Faculty of 1000 Ltd}
+}
+
+@article{tung2017batch,
+  title={Batch effects and the effective design of single-cell gene expression studies},
+  author={Tung, Po-Yuan and Blischak, John D and Hsiao, Chiaowen Joyce and Knowles, David A and Burnett, Jonathan E and Pritchard, Jonathan K and Gilad, Yoav},
+  journal={Scientific reports},
+  volume={7},
+  number={1},
+  pages={1--15},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{mccarthy2009testing,
+  title={Testing significance relative to a fold-change threshold is a TREAT},
+  author={McCarthy, Davis J and Smyth, Gordon K},
+  journal={Bioinformatics},
+  volume={25},
+  number={6},
+  pages={765--771},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{law2014voom,
+  title={voom: Precision weights unlock linear model analysis tools for RNA-seq read counts},
+  author={Law, Charity W and Chen, Yunshun and Shi, Wei and Smyth, Gordon K},
+  journal={Genome biology},
+  volume={15},
+  number={2},
+  pages={1--17},
+  year={2014},
+  publisher={BioMed Central}
+}
+
+@article{mcinnes2018umap,
+  title={Umap: Uniform manifold approximation and projection for dimension reduction},
+  author={McInnes, Leland and Healy, John and Melville, James},
+  journal={arXiv preprint arXiv:1802.03426},
+  year={2018}
+}
+
+@article{van2008visualizing,
+  title={Visualizing data using t-SNE.},
+  author={Van der Maaten, Laurens and Hinton, Geoffrey},
+  journal={Journal of machine learning research},
+  volume={9},
+  number={11},
+  year={2008}
+}
+
+@article{ilicic2016classification,
+  title={Classification of low quality cells from single-cell RNA-seq data},
+  author={Ilicic, Tomislav and Kim, Jong Kyoung and Kolodziejczyk, Aleksandra A and Bagger, Frederik Otzen and McCarthy, Davis James and Marioni, John C and Teichmann, Sarah A},
+  journal={Genome biology},
+  volume={17},
+  number={1},
+  pages={1--15},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+@article{satija2015spatial,
+  title={Spatial reconstruction of single-cell gene expression data},
+  author={Satija, Rahul and Farrell, Jeffrey A and Gennert, David and Schier, Alexander F and Regev, Aviv},
+  journal={Nature biotechnology},
+  volume={33},
+  number={5},
+  pages={495--502},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
 @article{stuart2019comprehensive,
   title={Comprehensive integration of single-cell data},
   author={Stuart, Tim and Butler, Andrew and Hoffman, Paul and Hafemeister, Christoph and Papalexi, Efthymia and Mauck III, William M and Hao, Yuhan and Stoeckius, Marlon and Smibert, Peter and Satija, Rahul},
@@ -28,87 +120,3 @@
   publisher={Nature Publishing Group}
 }
 
-@article{lun2016pooling,
-  title={Pooling across cells to normalize single-cell RNA sequencing data with many zero counts},
-  author={Lun, Aaron TL and Bach, Karsten and Marioni, John C},
-  journal={Genome biology},
-  volume={17},
-  number={1},
-  pages={75},
-  year={2016},
-  publisher={BioMed Central}
-}
-
-@article{sheridan2015pooled,
-  title={A pooled shRNA screen for regulators of primary mammary stem and progenitor cells identifies roles for Asap1 and Prox1},
-  author={Sheridan, Julie M and Ritchie, Matthew E and Best, Sarah A and Jiang, Kun and Beck, Tamara J and Vaillant, Fran{\c{c}}ois and Liu, Kevin and Dickins, Ross A and Smyth, Gordon K and Lindeman, Geoffrey J and others},
-  journal={BMC cancer},
-  volume={15},
-  number={1},
-  pages={221},
-  year={2015},
-  publisher={BioMed Central}
-}
-
-@article{mccarthy2017scater,
-  title={Scater: pre-processing, quality control, normalization and visualization of single-cell RNA-seq data in R},
-  author={McCarthy, Davis J and Campbell, Kieran R and Lun, Aaron TL and Wills, Quin F},
-  journal={Bioinformatics},
-  volume={33},
-  number={8},
-  pages={1179--1186},
-  year={2017},
-  publisher={Oxford University Press}
-}
-
-@article{law2016rna,
-  title={RNA-seq analysis is easy as 1-2-3 with limma, Glimma and edgeR},
-  author={Law, Charity W and Alhamdoosh, Monther and Su, Shian and Smyth, Gordon K and Ritchie, Matthew E},
-  journal={F1000Research},
-  volume={5},
-  year={2016},
-  publisher={Faculty of 1000 Ltd}
-}
-
-@article{maaten2008visualizing,
-  title={Visualizing data using t-SNE},
-  author={Maaten, Laurens van der and Hinton, Geoffrey},
-  journal={Journal of machine learning research},
-  volume={9},
-  number={Nov},
-  pages={2579--2605},
-  year={2008}
-}
-
-@article{trapnell2014dynamics,
-  title={The dynamics and regulators of cell fate decisions are revealed by pseudotemporal ordering of single cells},
-  author={Trapnell, Cole and Cacchiarelli, Davide and Grimsby, Jonna and Pokharel, Prapti and Li, Shuqiang and Morse, Michael and Lennon, Niall J and Livak, Kenneth J and Mikkelsen, Tarjei S and Rinn, John L},
-  journal={Nature biotechnology},
-  volume={32},
-  number={4},
-  pages={381},
-  year={2014},
-  publisher={Nature Publishing Group}
-}
-
-@article{ritchie2015limma,
-  title={limma powers differential expression analyses for RNA-sequencing and microarray studies},
-  author={Ritchie, Matthew E and Phipson, Belinda and Wu, Di and Hu, Yifang and Law, Charity W and Shi, Wei and Smyth, Gordon K},
-  journal={Nucleic acids research},
-  volume={43},
-  number={7},
-  pages={e47--e47},
-  year={2015},
-  publisher={Oxford University Press}
-}
-
-@article{xu2015identification,
-  title={Identification of cell types from single-cell transcriptomes using a novel clustering method},
-  author={Xu, Chen and Su, Zhengchang},
-  journal={Bioinformatics},
-  volume={31},
-  number={12},
-  pages={1974--1980},
-  year={2015},
-  publisher={Oxford University Press}
-}
